# bloatbuster

./: .pre-commit-config.yaml  config.yaml  pyproject.toml
src/bloatbuster/: bloatbuster.py
tests/: test_bloatbuster.py
